--- a/todo.txt
+++ b/todo.txt
@@ -6,27 +6,51 @@ Watch 'Understanding Compiler Optimization - Chandler Carruth' on youtube
 Reference for x86 machine code
     http://ref.x86asm.net/coder32.html
 
-assembler_append_header(struct Assembler *a) needs to be finished
-
 GOAL 1: Make a assembler/linker for it
-        look in linkers_and_loaders directory for notes on how to do this
-        probably a good idea to not use fun.asm until the entire thing can
-            be successfully assembled into machine code.  Let's keep it simple guys
-            Set return value to ebx (so that exit() returns it.  We can then check the return value)
+    Add more machine code mappings for assembler
+        add enough to get it turing complete (booleans, conditionals, loops)
+        //basic
+        //need to figure how to deref / do offsets
+        //each register pair (different depending on src/dst) has its own byte code?
+        //for a given source register, there is an offset
+        //  for each given dst register, the byte is that offset + register order
 
-        The assembler needs to write bytes to a binary file
 
-        Instead of using Literal, use Immediate (eg, NodeImm)
-            and NodeReg, and NodeDeRef (for dereferencing...?)
+        add     r, imm
+        add     r, r
+        push    imm
+        push    r
+        pop     r
+        mul     r, r
+        div     r, r
+        imul    r, r    
+        idiv    r, r
 
-    Get assembler working
-        assembler should parse 'org' and hex (need these two to compute _start location of program)
-        write ELF header
-        write the code
-        write buffer to binary file
+        //for conditionals
+        jmp     imm
+        jz
+        je
+        cmp     r, imm
+        cmp     r, r
+        test    r, imm
+        test    r, r
+        neg     r32
+        inc     r32
+        sete    r8
+        setl    r8
+        setg    r8
+        movzx   r32, r8
+        xor     r, r
 
-        write elf header, and track two places where final filesize is needed (two doubles)
-        write out binary, compute the final file size, and the patch it into those two locations
+        //function calls (mainly for fun.asm for now - no function definitions/calls supported in tamarind yet)
+        call    <identifier>
+        ret
+        
+
+    Linker stuff (linking multiple elf files statically)
+        will each ELF object file need a relocation table (showing with addresses need to be relocated)
+            is 'org' used in relocation?  Am I mixing the assembler and linker?  Or is there another relocation step in the linker too?
+
 
 GOAL 2: For loops, functions, switch statements, arrays and structs (and classes?), pointers/references
 
