--- a/todo.txt
+++ b/todo.txt
@@ -26,43 +26,36 @@ Reference for x86 machine code
 Look at this stackoverflow post for how machine code is structured: (THIS IS REALLY GOOD!)
     https://stackoverflow.com/questions/45526209/referencing-registers-in-machine-code
 
-    Redo assembly to machine code translation:
-        get add with two registers working first
-        get constants (INDS_ADD, DIR_REG, etc) corresponding to tables
-            maybe a better way to do this?  Could be problematic if
-            constants don't match with table entries
 
     Change over assembly to use new bit tables <-----------START HERE!!!!!
 
-        Could just not worry about the direction/size bits and directly use the opcodes in the reference
-            the RM and MR op/en will already tell us the dst and src of the registers/memory
+        Get assembler working with immediates values
 
-            could have a boolean to signify when it's MR or RM
+            Redo IDIV
+            Redo remaining opcodes
 
-        void write_code(INS_SUB, dst, src) {
-            //if instruction is RM, swap dst and src
-        }
+            change rsm_tbl to rm_tble 
 
-        enum OpEn {
-            OE_MR,
-            OE_RM
-        };
+            remove opc_tbl complete (keep for ModR/M since that combination is necessary)
+            remove mov_reg_reg_code and other unused functions
 
-        //opcode, 
-        uint8_t ins_tbl[][2] = {
-            {0x00, OE_MR},
-            {0x00, OE_MR},
-            {0x00, OE_RM},
-            {0xaf, OE_RM}
-        };
+        Get assembler working with single and zero operand operations
 
-        Why is imul reversed for dst and src?????
+        Get assembler working with byte offsets and dereferencing!!! (the ultimate goal - this is where our assembler is getting stuck)
 
-        ????Is the direction bit ignored???  (since the direction seems encoded in the opcode already
-            using MR and RM
-        add instruction has MR encoding (Memory <- Register???)
-        mov has MR op/en too
-        sub has MR op/en too
+        write_code_2(a, INS_IMUL, dst->t.type, src->t.type);
+            should have this function take in two struct ANodeReg instead of TokenTypes
+            this will make it easier to modify later since all the casting will be inside of the write_code_2 function
+
+
+        could split write_code_2 into two functions (consider this later, for now it's fine as a single function)
+            write_operator_code     opcode from Intel manuals (direction and size are integrated into opcode already)
+            write_operand_code      The 8 bits for MOD, REG, and R/M
+
+            this depends on how intertwined these two bytes are
+
+            get immediate
+
 
         Reg to Reg is done with mov/add/sub - how about imul??????
             need to read docs on how imul works
